# backlog-mcp-server-rust

./: .gitignore  API.md  CLAUDE.md  CUSTOM_FIELD_IMPLEMENTATION_PLAN.md  Cargo.toml  LAYERED_ARCHITECTURE_REFACTORING_PLAN.md  MCP.md  MIGRATION_GUIDE_CUSTOM_FIELDS.md  README.md  Readme.md  project_structure.md
backlog-api-client/: Cargo.toml  README.md
backlog-api-client/src/: client.rs  lib.rs
backlog-api-core/: Cargo.toml
backlog-api-core/src/: error.rs  lib.rs
backlog-document/: Cargo.toml
backlog-document/src/: api.rs  lib.rs  models.rs  requests.rs  responses.rs
backlog-document/src/api/: mod.rs
backlog-document/src/models/: attachment.rs  document.rs  document_detail.rs  mod.rs  tag.rs  tree_node.rs
backlog-git/: Cargo.toml
backlog-git/src/: api.rs  error.rs  handler.rs  lib.rs  models.rs
backlog-git/src/requests/: add_pull_request_comment.rs  get_pull_request_comment_list.rs  mod.rs
backlog-issue/: Cargo.toml
backlog-issue/src/: lib.rs
backlog-issue/src/api/: mod.rs
backlog-issue/src/models/: attachment.rs  changelog.rs  comment.rs  custom_field.rs  custom_field_type.rs  custom_field_type_id.rs  external_file_link.rs  initial_date.rs  issue.rs  mod.rs  notification.rs  notification_reason.rs  parent_child.rs  priority.rs  resolution.rs  shared_file.rs  star.rs
backlog-issue/src/requests/: add_issue.rs  get_comment_list.rs  get_issue_list.rs  mod.rs  update_issue.rs
backlog-issue/src/responses/: mod.rs
backlog-project/: Cargo.toml
backlog-project/src/: lib.rs
backlog-project/src/api/: mod.rs
backlog-project/src/models/: category.rs  mod.rs  project.rs  shared_file.rs  status.rs
backlog-project/src/models/activity/: content.rs  type_id.rs
backlog-project/src/requests/: mod.rs
backlog-project/src/responses/: mod.rs
backlog-user/: Cargo.toml
backlog-user/src/: lib.rs
backlog-user/src/api/: mod.rs
cli/: CUSTOM_FIELDS_USAGE.md  Cargo.toml  README.md
cli/src/: activity_commands.rs  custom_fields.rs  main.rs
cli/src/commands/: mod.rs  rate_limit.rs  star.rs  team.rs  watching.rs  webhook.rs
cli/tests/: custom_field_error_messages_test.rs  custom_fields_test.rs  team_icon_test.rs  team_integration_test.rs  team_test.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs  test_utils.rs
crates/backlog-activity/: Cargo.toml
crates/backlog-activity/src/: lib.rs
crates/backlog-activity/src/api/: activity_api.rs  get_activity.rs  mod.rs
crates/backlog-activity/src/models/: mod.rs
crates/backlog-activity/tests/: activity_api_test.rs
crates/backlog-activity/tests/common/: mod.rs
crates/backlog-api-client/: Cargo.toml
crates/backlog-api-client/src/: client.rs  lib.rs
crates/backlog-git/: Cargo.toml
crates/backlog-git/src/: api.rs  models.rs
crates/backlog-git/src/api/: add_pull_request.rs  add_pull_request_comment.rs  delete_pull_request_attachment.rs  download_pull_request_attachment.rs  get_pull_request.rs  get_pull_request_attachment_list.rs  get_pull_request_comment_count.rs  get_pull_request_comment_list.rs  get_pull_request_count.rs  get_pull_request_list.rs  get_repository.rs  get_repository_list.rs  git_api.rs  mod.rs  update_pull_request.rs  update_pull_request_comment.rs
crates/backlog-git/src/requests/: add_pull_request.rs  add_pull_request_comment.rs  delete_pull_request_attachment.rs  download_pull_request_attachment.rs  get_pull_request.rs  get_pull_request_attachment_list.rs  get_pull_request_comment_count.rs  get_pull_request_comment_list.rs  get_pull_request_count.rs  get_pull_request_list.rs  get_repository.rs  get_repository_list.rs  mod.rs  update_pull_request.rs  update_pull_request_comment.rs
crates/backlog-git/tests/: git_api_test.rs  git_writable_test.rs
crates/backlog-git/tests/common/: mod.rs
crates/backlog-rate-limit/: Cargo.toml
crates/backlog-rate-limit/src/: models.rs
crates/backlog-rate-limit/src/api/: get_rate_limit.rs  mod.rs  rate_limit_api.rs
crates/backlog-rate-limit/tests/: integration_test.rs  rate_limit_api_test.rs
crates/backlog-rate-limit/tests/common/: mod.rs
crates/backlog-space/: Cargo.toml
crates/backlog-space/src/: lib.rs  models.rs
crates/backlog-space/src/api/: get_licence.rs  get_space.rs  get_space_disk_usage.rs  get_space_logo.rs  get_space_notification.rs  get_space_recent_updates.rs  mod.rs  space_api.rs  update_space_notification.rs  upload_attachment.rs
crates/backlog-space/src/requests/: get_space.rs  get_space_logo.rs  mod.rs
crates/backlog-space/src/responses/: mod.rs
crates/backlog-space/tests/: space_api_test.rs  space_recent_updates_test.rs  space_writable_test.rs
crates/backlog-space/tests/common/: mod.rs
crates/backlog-star/: Cargo.toml
crates/backlog-star/src/: lib.rs
crates/backlog-star/src/api/: add_star.rs  mod.rs  star_api.rs
crates/backlog-star/tests/: star_writable_test.rs
crates/backlog-star/tests/common/: mod.rs
crates/backlog-webhook/: Cargo.toml
crates/backlog-webhook/src/: lib.rs  models.rs
crates/backlog-webhook/src/api/: add_webhook.rs  delete_webhook.rs  get_webhook.rs  get_webhook_list.rs  mod.rs  update_webhook.rs  webhook_api.rs
crates/backlog-webhook/tests/: webhook_api_test.rs  webhook_writable_test.rs
crates/backlog-webhook/tests/common/: mod.rs
crates/backlog-wiki/: Cargo.toml
crates/backlog-wiki/src/: lib.rs  models.rs
crates/backlog-wiki/src/api/: add_recently_viewed_wiki.rs  mod.rs  (+18 more)
crates/backlog-wiki/tests/: wiki_api_test.rs  wiki_recently_viewed_test.rs  wiki_writable_test.rs
mcp-backlog-server/: Cargo.toml  README.md
mcp-backlog-server/src/: attachment.rs  document.rs  error.rs  file_utils.rs  git_tools.rs  issue.rs  lib.rs  main.rs  server.rs  util.rs
mcp-backlog-server/src/document/: bridge.rs  request.rs
mcp-backlog-server/src/file/: bridge.rs  request.rs
mcp-backlog-server/src/git/: bridge.rs  mod.rs  request.rs  tools.rs
mcp-backlog-server/src/issue/: bridge.rs  request.rs
mcp-backlog-server/src/project/: bridge.rs  mod.rs  request.rs
mcp-backlog-server/src/tools/: git.rs  issue.rs  mod.rs
mcp-backlog-server/src/user/: bridge.rs  request.rs
(+418 files in other folders)
