[workspace]
resolver = "2"
members = [
    "client",
    "backlog-core",
    "backlog-api-core",
    "backlog-issue",
    "backlog-project",
    "backlog-space",
    "backlog-user",
    "backlog-api-client",
    "mcp-backlog-server",
    "backlog-document"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.12.17", features = ["json"] }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"
url = "2.5"
regex = "1.11"
chrono = { version = "0.4.41", features = ["serde"] }
derive_builder = "0.20"
