[package]
name = "backlog-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["issue", "project", "space", "user", "document", "git", "all_writable"] # Added "document", "git"
issue = ["backlog-issue"]
project = ["backlog-project"]
space = ["backlog-space"]
user = ["backlog-user"]
document = ["backlog-document"] # Added document feature
git = ["backlog-git"] # Added git feature
schemars = [ # Added schemars feature to propagate to sub-crates
    "backlog-core/schemars",
    "backlog-issue/schemars",
    "backlog-project/schemars",
    # "backlog-space/schemars", # Add if/when space has schemars
    # "backlog-user/schemars", # Removed as backlog-user doesn't have this feature
    "backlog-document/schemars",
    "backlog-git/schemars",
]
cli = ["clap"] # Added cli feature for clap dependency
all_writable = ["backlog-issue/writable", "backlog-project/writable", "backlog-space/writable", "backlog-user/writable"]
issue_writable = ["backlog-issue/writable"]
project_writable = ["backlog-project/writable"]
space_writable = ["backlog-space/writable"]
user_writable = ["backlog-user/writable"]

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-issue = { path = "../backlog-issue", optional = true }
backlog-project = { path = "../backlog-project", optional = true }
backlog-space = { path = "../backlog-space", optional = true }
backlog-user = { path = "../backlog-user", optional = true }
backlog-document = { path = "../backlog-document", optional = true }
backlog-git = { path = "../backlog-git", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true } # For CLI arg parsing
tokio = { workspace = true }
url = { workspace = true }

[[bin]]
name = "blg"
path = "src/bin/blg.rs"
required-features = ["cli", "git", "issue"]
