[package]
name = "backlog-document"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
# Add later if tests are implemented in this crate
# wiremock = { workspace = true }
# tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
