[package]
name = "backlog-document"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
client = { path = "../client", features = ["test-utils"] } # Enabled test-utils feature
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
