[package]
name = "backlog-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
client = { path = "../client" }
