[package]
name = "backlog-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
backlog-core = { path = "../backlog-core", features = ["schemars"] }
backlog-api-core = { path = "../backlog-api-core" }
client = { path = "../client", features = ["test-utils"] }

[features]
default = []
schemars = ["dep:schemars", "backlog-core/schemars"]

[dependencies.schemars]
workspace = true
optional = true

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
