[package]
name = "backlog-issue"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
writable = [ "client/writable" ]

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
