[package]
name = "backlog-issue"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
writable = [ "client/writable" ]
schemars = ["dep:schemars", "backlog-project/schemars", "backlog-core/schemars"] # Added backlog-core/schemars

[dependencies]
client = { path = "../client", features = ["test-utils"] } # Added test-utils feature
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-project = { path = "../backlog-project" } # Added backlog-project dependency
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
schemars = { workspace = true, features = ["chrono04"], optional = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
