[package]
name = "backlog-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
writable = []
schemars = ["dep:schemars", "backlog-core/schemars", "backlog-domain-models/schemars"]

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-domain-models = { path = "../backlog-domain-models" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
client = { path = "../client", features = ["test-utils"] }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
