[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
backlog-api-core = { path = "../backlog-api-core" }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }