[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
writable = []
test-utils = ["dep:wiremock"] # Added for exposing test utilities, now includes wiremock

[dependencies]
backlog-api-core = { path = "../backlog-api-core" }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
wiremock = { version = "0.6.1", optional = true } # Added wiremock
