[package]
name = "mcp-backlog-server"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["issue_writable"]
issue_writable = ["backlog-api-client/issue_writable"]

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-io"] }
tokio = { workspace = true, features = ["full"] } # Using full for server, can be rt-multi-thread, macros
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Dependencies on other workspace crates
backlog-api-client = { path = "../backlog-api-client", features = ["issue", "document", "git"] }
backlog-document = { path = "../backlog-document" } # For the Document struct
backlog-git = { path = "../backlog-git" } # Added backlog-git for its models
strsim = "0.11.1"

[dev-dependencies]
# wiremock = "0.6.1" # If adding tests later
