[package]
name = "mcp-backlog-server"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["issue_writable"]
issue_writable = ["backlog-api-client/issue_writable"]

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-io"] }
tokio = { workspace = true, features = ["full"] } # Using full for server, can be rt-multi-thread, macros
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Dependencies on other workspace crates
backlog-api-client = { path = "../backlog-api-client", features = ["issue", "document", "git", "project"] }
backlog-project = { path = "../backlog-project" }
backlog-core = { path = "../backlog-core" } # For ProjectIdOrKey parsing and other core types
schemars = { workspace = true, features = ["derive"] } # For JsonSchema derive
strsim = "0.11.1"
mime_guess = { workspace = true } # Added for MIME type guessing
base64 = { workspace = true } # Added for base64 encoding

[dev-dependencies]
# wiremock = { workspace = true }
