[package]
name = "backlog-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["issue", "project", "space", "user", "document", "git", "file", "wiki"] # Library defaults without writable features
issue = ["backlog-issue"]
project = ["backlog-project", "backlog-domain-models"]
space = ["backlog-space"]
user = ["backlog-user"]
document = ["backlog-document"]
git = ["backlog-git"]
file = ["backlog-file"]
wiki = ["backlog-wiki"]
schemars = [ # Added schemars feature to propagate to sub-crates
    "backlog-core/schemars",
    "backlog-domain-models?/schemars",
    "backlog-issue?/schemars",
    "backlog-project?/schemars",
    # "backlog-space/schemars", # Add if/when space has schemars
    # "backlog-user/schemars", # Removed as backlog-user doesn't have this feature
    "backlog-document?/schemars",
    "backlog-git?/schemars",
    "backlog-file?/schemars",
    "backlog-wiki?/schemars",
]
all_writable = ["issue_writable", "project_writable", "space_writable", "user_writable", "git_writable", "wiki_writable"]
issue_writable = ["backlog-issue?/writable", "client/writable"]
project_writable = ["backlog-project?/writable", "client/writable"]
space_writable = ["backlog-space?/writable", "client/writable"]
user_writable = ["backlog-user?/writable"]
git_writable = ["backlog-git?/writable", "client/writable"]
wiki_writable = ["backlog-wiki?/writable", "client/writable"]

[dependencies]
client = { path = "../client" }
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-domain-models = { path = "../backlog-domain-models", optional = true }
backlog-issue = { path = "../backlog-issue", optional = true }
backlog-project = { path = "../backlog-project", optional = true }
backlog-space = { path = "../backlog-space", optional = true }
backlog-user = { path = "../backlog-user", optional = true }
backlog-document = { path = "../backlog-document", optional = true }
backlog-git = { path = "../backlog-git", optional = true }
backlog-file = { path = "../backlog-file", optional = true }
backlog-wiki = { path = "../backlog-wiki", optional = true }
tokio = { workspace = true }
url = { workspace = true }

# For examples
chrono = { workspace = true }

[[example]]
name = "custom_fields_example"
path = "../../examples/custom_fields_example.rs"
required-features = ["issue", "issue_writable"]

[[example]]
name = "custom_fields_simple"
path = "../../examples/custom_fields_simple.rs"
required-features = ["issue", "issue_writable"]