[package]
name = "backlog-wiki"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
writable = ["client/writable"]
schemars = ["backlog-core/schemars", "dep:schemars"]

[dependencies]
backlog-core = { path = "../backlog-core" }
backlog-api-core = { path = "../backlog-api-core" }
backlog-api-macros = { path = "../backlog-api-macros" }
backlog-domain-models = { path = "../backlog-domain-models" }
backlog-file = { path = "../backlog-file" }
client = { path = "../client" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
client = { path = "../client", features = ["test-utils"] }